--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>HopeVisionAI </title>
+      <link rel="icon" type="image/png" href="/iconlogo.png">
+
     </head>
 
     <body>
